fix layout problems on groovedb player

--- a/css/groove_display.css
+++ b/css/groove_display.css
@@ -24,22 +24,22 @@
 	.svgTarget {
 	}
 	
-	#midiPlayer {
-		background-color: #2484c0;
-
-	}
 	.playerControl {
 		display: inline-block;
 		background-color: #2484c0;
 		width: 100%;  /* expand to the surounding element */
+		font-family: 'Lato', sans-serif;
+		padding-left: 6px;
 	}
 	.playerControl.large {
 		width: 866px;
 		border: 1px solid #009;
+		padding-left: 0px;
 	}
 	.playerControl.small {
-		width: 100px;
+		width: 90px;
 		border: 1px solid #009;
+		padding-left: 0px;
 	}
 
 	.playerControlsRow {
@@ -49,26 +49,32 @@
 		flex-flow: flex-start;
 		flex-wrap: nowrap;
 	}
-	.midiPlayImage, .midiRepeatImage {
+	.midiPlayImage, .midiRepeatImage, .midiExpandImage {
 		width: 40px;
 		height: 40px;
 		cursor: pointer;
 		flex: none;
-		margin: 4px 10px 0px 10px;
+		margin: 4px 0px 4px 0px;
 		border: 0px solid #000;
-		background: #68c2ff;
 		color: #005483;
 		font-size: 20px;
 		font-family: FontAwesome;
-		border-radius: 50%;
 		text-align: center;
 		line-height: 40px;
 		vertical-align: middle;
+		border-radius: 50%;
+	}
+	.midiPlayImage, .midiRepeatImage {
+		background: #68c2ff;
+		margin: 4px 4px 4px 4px;
+		
 	}
 	.midiPlayImage:hover, .midiRepeatImage:hover {
 		color: #68c2ff;
 		background: #005483;
-		
+	}
+	.midiExpandImage:hover {
+		color: #68c2ff;
 	}
 	.midiPlayImage.Stopped:before ,  .midiPlayImage.Paused:before   { 
 	 	letter-spacing: -3px; 
@@ -77,21 +83,6 @@
 	.midiPlayImage.Playing:before  { 
 		content: "\f04c"; 
 	} 
-	.midiExpandImage {
-		width: 40px;
-		height: 40px;
-		cursor: pointer;
-		color: #68C2FF;
-		margin-top: 8px;  
-		margin-right: 0px;
-		flex: none;
-		letter-spacing: -3px; 
-		font-size: 30px;
-		font-family: FontAwesome;
-	}
-	.midiExpandImage:hover {
-		color: #005483;
-	}
 	.midiExpandImage.small:before   { 
 	 	letter-spacing: -3px; 
 		content: "\f065";
@@ -173,8 +164,10 @@
 		width: 130px;
 		color: #66c0fe;
 		font-size: 30px;
+		margin-left: 6px;
 		padding-top: 4px;
 		text-align: left;
+		line-height: 40px;
 		flex: none;
 	}
 	.MIDIPlayTime.small {
